update eww workspace widget

--- a/hypr/AppStartup.conf
+++ b/hypr/AppStartup.conf
@@ -1,6 +1,6 @@
 exec-once = dunst --config ~/.config/dunst/dunstrc
 exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
-exec-once = cd ~/Apps/arrpc ; node src
+exec-once = node ~/Apps/arrpc/src
 exec = pkill syncthing ; syncthing
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
