--- a/hypr/Input.conf
+++ b/hypr/Input.conf
@@ -14,9 +14,9 @@ input {
     sensitivity = 0
 }
 
-####
-#  Keybinds
-####
+#############
+#  Keybinds #
+#############
 
 # Main Mod
 $mainMod = SUPER
@@ -24,22 +24,34 @@ $mainMod = SUPER
 bind = $mainMod, Tab, workspace, m+1
 bind = $mainMod_SHIFT, Tab, workspace, m-1
 
+####
 # Application Launch
+####
+
 bind = $mainMod_SHIFT, Return, exec, kitty
 bind = $mainMod, W, exec, Vivaldi-stable
 bind = $mainMod, D, exec, armcord
 
+####
 # Rofi
+####
+
 bind = $mainMod, Space, exec, rofi -show drun -modi drun -config ~/.config/rofi/AppLauncher.rasi
 bind = $mainMod, M, exec, ~/Scripts/rofi/Script-Launcher.sh
 bind = $mainMod, C, exec, cliphist list | rofi -dmenu -i -p "Clipboard" -config ~/.config/rofi/Script-Launcher.rasi -display-columns 2 | cliphist decode | wl-copy && wl-paste
 
 ### Control
 bind = $mainMod, bracketleft, exec, ~/.config/hypr/playerctl.sh
+bind = $mainMod, equal, exec, amixer set "Master" 5%+
+bind = $mainMod, minus, exec, amixer set "Master" 5%-
 
 # Screenshot (fullscreen)
 bind = , Print, exec, grim ~/Pictures/Screenshots/$(date +"%Y-%m-%d-%H-%M-%S.png")
 bind = _SHIFT, Print, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +"%Y-%m-%d-%H-%M-%S.png")
+
+####
+# Workspace
+#### 
 
 # Window manipulation
 bind = $mainMod, Q, killactive, 
